--- a/Detect_xk/Detect_xk.csproj
+++ b/Detect_xk/Detect_xk.csproj
@@ -92,6 +92,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserLoader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserLoader.Designer.cs">
+      <DependentUpon>UserLoader.cs</DependentUpon>
+    </Compile>
+    <Compile Include="XMLTools.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +108,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserLoader.resx">
+      <DependentUpon>UserLoader.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
