在本机的数据源上可以访问数据库了

--- a/Detect_xk/Detect_xk.csproj
+++ b/Detect_xk/Detect_xk.csproj
@@ -78,6 +78,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="COM.cs" />
+    <Compile Include="DataBase.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
