跑通整个流程

--- a/Detect_xk/Detect_xk.csproj
+++ b/Detect_xk/Detect_xk.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arm.cs" />
     <Compile Include="COM.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="MainForm.cs">
